update conf with submodule move

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,4 +1,3 @@
-
 include ./theme.conf
 cursor none
 mouse_hide_wait 1.0
@@ -37,14 +36,13 @@ map cmd+; next_layout
 map ctrl+j previous_tab
 map ctrl+k next_tab
 
+map kitty_mod+j kitten libs/vim-kitty-navigator/pass_keys.py neighboring_window bottom cmd+j
+map kitty_mod+k kitten libs/vim-kitty-navigator/pass_keys.py neighboring_window top    cmd+k
+map kitty_mod+h kitten libs/vim-kitty-navigator/pass_keys.py neighboring_window left   cmd+h
+map kitty_mod+l kitten libs/vim-kitty-navigator/pass_keys.py neighboring_window right  cmd+l
 
-map kitty_mod+j kitten vim_navigator/pass_keys.py neighboring_window bottom cmd+j
-map kitty_mod+k kitten vim_navigator/pass_keys.py neighboring_window top    cmd+k
-map kitty_mod+h kitten vim_navigator/pass_keys.py neighboring_window left   cmd+h
-map kitty_mod+l kitten vim_navigator/pass_keys.py neighboring_window right  cmd+l
 
-
-map ctrl+/ launch --allow-remote-control kitty +kitten kitty_search/search.py @active-kitty-window-id
+map ctrl+/ launch --allow-remote-control kitty +kitten libs/kitty-kitten-search/search.py @active-kitty-window-id
 
 
 
