--- a/kitty.conf
+++ b/kitty.conf
@@ -16,16 +16,16 @@ tab_title_template "{fmt.fg.tab}{title}"
 
 
 editor vim
-allow_remote_control yes
+# allow_remote_control yes
 
 font_family MesloLGS NF
 # font_family  Iosevka Custom Extended
 # bold_font  Iosevka Custom Extrabold Extended
 # italic_font      Iosevka Custom Extended Oblique
 # bold_italic_font Iosevka Custom Extrabold Extended Oblique
-font_size 14
+font_size 7
 
-kitty_mod cmd+ctrl
+kitty_mod ctrl+shift
 
 # map ctrl+k kitten mykitten.py
 map kitty_mod+q kitten mykitten.py
@@ -42,7 +42,6 @@ map kitty_mod+h kitten libs/vim-kitty-navigator/pass_keys.py neighboring_window 
 map kitty_mod+l kitten libs/vim-kitty-navigator/pass_keys.py neighboring_window right  cmd+l
 
 
-map ctrl+/ launch --allow-remote-control kitty +kitten libs/kitty-kitten-search/search.py @active-kitty-window-id
+# map ctrl+/ launch --allow-remote-control kitty +kitten libs/kitty-kitten-search/search.py @active-kitty-window-id
 
-
-
+map ctrl+/ no_op
